2016-11-19	"I shot an arrow in to the air, and it stuck."  (6)

		include/innocent-pear/omg.h :
		- gobs of debugging code for omg<...>::wheee()

		GNUmakefile :
		- now also compiles test-omg-wheee in full-fledged debug mode

		test/test-omg-wheee.cc ,
		test/test-omg-wheee.good :
		- beefed up

2016-11-18	"I shot an arrow in to the air, and it stuck."  (5)

		include/innocent-pear/omg.h :
		- omg<...>::wheee() now correctly marks `push'...`ret'/`lret'/
		  `iret' sequences as clobbering memory
		- removed use of ohai.h

		include/innocent-pear/unpossible.h :
		- marked junk bytes as clobbering memory _and_ condition flags

		include/innocent-pear/ohai.h :
		- removed -- was causing much trouble for little benefit

		GNUmakefile ,
		share/innocent-pear/doge-01.cc :
		- removed use of ohai.h

2016-11-17	"I shot an arrow in to the air, and it stuck."  (4)

		include/innocent-pear/ohai.h :
		- let us try this...

2016-11-16	Veneers and more.

		include/innocent-pear/omg.h :
		- further fleshed out basis cases for ARM, x86-32, and x86-64
		- omg<...>::wheee():
		  - reduced layers of pointer scrambling
		  - is now public, not private, if either innocent_pear_DEBUG
		    or innocent_pear_DEBUG_WHEEE is defined
		  - for ELF on ARM, now tries generating veneers

		include/innocent-pear/rofl.h :
		- ARM syscalls:
		  - now uses dummy outputs rather than clobbers for 0- and
		    1-argument syscalls; this should give the compiler a bit
		    more freedom when allocating registers
		  - fixed bug in 4-argument syscalls
		- x86-32 under clang++: now produces compiler warning when
		  using fallback

		include/innocent-pear/ohai.h :
		- removed non-working compiler feature workaround

		include/innocent-pear/kthxbai.h :
		- added forward declaration for rofl<...>

		test/test-omg-wheee.cc ,
		test/test-omg-wheee.good :
		- new

		GNUmakefile :
		- added test-omg-wheee test case

2016-11-15	"I shot an arrow in to the air, and it stuck."  (3)

		include/innocent-pear/rofl.h :